--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "bootstrap": "^4.0.0",
+    "firebase-tools": "^3.18.2",
     "react": "^16.2.0",
     "react-autocomplete": "^1.8.1",
     "react-bootstrap": "^0.32.1",
