--- a/package.json
+++ b/package.json
@@ -3,15 +3,27 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "async-map": "^0.2.0",
     "bootstrap": "^4.0.0",
+    "combinatorics": "^0.1.0",
+    "firebase": "^4.12.1",
+    "firebase-admin": "^5.12.0",
     "firebase-tools": "^3.18.2",
+    "guid": "0.0.12",
+    "js-combinatorics": "^0.5.3",
+    "lodash": "^4.17.5",
+    "mongodb": "^3.0.7",
+    "mongodb-core": "^3.0.7",
+    "promise-worker": "^1.1.1",
+    "promise-worker-node": "^2.0.0",
     "react": "^16.2.0",
     "react-autocomplete": "^1.8.1",
     "react-bootstrap": "^0.32.1",
     "react-dom": "^16.2.0",
     "react-router-bootstrap": "^0.24.4",
     "react-router-dom": "^4.2.2",
-    "react-scripts": "1.1.1"
+    "react-scripts": "1.1.1",
+    "uuid": "^3.2.1"
   },
   "scripts": {
     "start": "react-scripts start",
